2010-07-08 Magnus Hagdorn
 * Makefile.am: change order of sub-directories
 * configure.in: remove one directory, add another
 * example-drivers/eis/fenscan/fenscan-erosion.config: moved from erosion
   directory, adjusted to use the same forcing as the other Fennoscandian 
   examples
 * example-drivers/eis/src/eis_erosion.F90: added sediment cover
 * example-drivers/eis/src/eis_erosion.F90: moved from erosion directory
 * example-drivers/eis/src/Makefile.am: optionally build eis_erosion driver
 * extensions/erosion/Makefile.am: remove tests directory
 * extensions/erosion/src/Makefile.am: only build library
 * tests/EISMINT/Makefile.am: add new directory
 * tests/EISMINT/erosion: moved tests from erosion directory
 * tests/EISMINT/src/simple_erosion.F90: moved from erosion directory
 * tests/EISMINT/src/Makefile.am: optionally build erosion EISMINT driver

2010-07-08 Magnus Hagdorn
 * example-drivers/eis/src/eis_ela.F90: fix bug in mass balance computation

2010-07-07 Magnus Hagdorn
 * doc/ext/libphaml/libphaml-app.tex: including the various files for appendices

2010-07-07 Magnus Hagdorn
 * configure.in: generate Makfile for building phaml documentation
 * doc/glimmer.bib: add phaml references
 * doc/glimmer.tex: add Time Wylie to list of authors
 * doc/make_doc.rules: add rules to turn pdf and png files to eps
 * doc/common/definitions.tex: define booleans controlling extensions here
 * doc/common/packages.tex: add fancybox
 * doc/ext/selected_ext.tex.in: only handle setting of booleans
 * doc/ext/libphaml: copied from extensions/libphaml/doc/src
 * doc/ext/Makefile.am: handle new directory
 * doc/ext/ext-app.tex: add file containing extensions appendices
 * doc/ext/ext.tex: add file including various extensions
 * extensions/libphaml/doc: removed

2010-07-07 Magnus Hagdorn
 * doc/glimmer.tex: rearrange documentation, introduce parts
 * doc/ext/ext.tex.in: turn chapter into a part
 * doc/ext/erosion/erosion.tex: move headings up one level